--- a/simpleAuth.html
+++ b/simpleAuth.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sanga Games  - Docs</title>
+    <title>Auth</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
-    <meta name="referrer" content="no-referrer-when-downgrade">
     <style>
 @font-face {
   font-family: 'Sans-Serif Workhorse';
@@ -205,7 +203,7 @@
 
     <div id="AuthScreen">
       <!-- <button id="signin_button"  style="display: block;" onclick="HandleAuth();" >SIGN IN</button> -->
-      <div id="g_id_onload" style="display:none"
+      <div id="g_id_onload" style="display:block"
           data-client_id="922877380869-464psb1ou671ss81ktsjfjo2to7hgtsi.apps.googleusercontent.com"
           data-context="use"
           data-ux_mode="popup"
@@ -213,7 +211,7 @@
           data-auto_prompt="false">
       </div>
 
-      <div class="g_id_signin" id="signin_button" style="display:none"
+      <div class="g_id_signin" id="signin_button" style="display:block"
           data-type="standard"
           data-shape="rectangular"
           data-theme="filled_blue"
