--- a/simpleAuth.html
+++ b/simpleAuth.html
@@ -5,66 +5,6 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <meta charset="utf-8" />
     <style>
-@font-face {
-  font-family: 'Sans-Serif Workhorse';
-  src: url('path/to/sans-serif-workhorse-font.woff2') format('woff2'),
-       url('path/to/sans-serif-workhorse-font.woff') format('woff');
-}
-#FileListContent .jstree-wholerow-clicked {
-  background: #dcdcdc !important; /* Change this value to the desired color */
-}
-
-#FileListContent .jstree-wholerow-hovered {
-  background-color: #ededed !important;
-}
-
-#FileListContent .jstree-clicked {
-  color: #444 !important;
-}
-#FileListContent .jstree-anchor {
-  font-weight: 700;
-  font-size:12px;
-  font-family: 'Sans-Serif Workhorse', sans-serif;
-  color:#777;
-}
-
-
-
-.jstree-contextmenu {
-  background-color: #f5f5f5; /* Set the background color */
-  border: 1px solid #ddd;
-  font-family: Arial, sans-serif; /* Set the font family */
-  font-size: 10px; /* Set the font size */
-  width: 150px; /* Set the width of the context menu */
-}
-
-.jstree-contextmenu .vakata-context {
-  color: #494949; /* Set the font color */
-  padding: 5px 10px;
-  height: 20px; /* Set the height of each menu item */
-  line-height: 20px; /* Set the line height to center the text vertically */
-}
-
-.jstree-contextmenu .vakata-context-hover {
-  background-color: #e0e0e0; /* Set the background color when hovered */
-}
-
-.jstree-contextmenu .vakata-context-disabled {
-  opacity: 0.5; /* Set the opacity for disabled items */
-}
-
-.jstree-contextmenu .vakata-context-separator {
-  border-top: 1px solid #ddd; /* Set the separator line color */
-}
-
-.jstree-contextmenu .vakata-context .vakata-contexticon {
-  display: none; /* Hide the icon space */
-}
-
-.jstree-contextmenu .vakata-contextmenu-sep {
-  display: none !important; /* Hide the icon space */
-}
-
       html, body 
       {
         min-height: 100% !important;
@@ -85,117 +25,6 @@
         left: 50%;
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
-      }
-      #signout_button
-      {
-        position:absolute;
-        font-weight:bold; 
-        color:#333; 
-        font-size: 14px;
-        right:0px; 
-        top:0px; 
-        background:white;  
-        height:28px; 
-        margin:1px; 
-        margin-right:10px;margin-top:6px;
-        border:1px solid #ddd;
-        border-radius: 5px;
-        padding-left:10px;
-        padding-right:10px;
-      }
-      #signout_button:hover
-      {
-        background-color:#ff2f5c;
-        color:white;
-        cursor: pointer;
-        transition: 0.3s;
-      } 
-      #signout_button:hover:after
-      {
-        content:" - SIGN OUT";
-      }
-      #sidebar
-      {
-        position: relative;  
-        resize: horizontal;
-        overflow: auto;
-        min-width:100px;
-        width:250px;
-        max-width:600px;
-        float:left;
-        height:100%;
-        background:#fafafa;
-        box-sizing: border-box;
-        border-right:  1px solid #efefef;
-      }
-      #contentholder
-      {  
-        position: relative;
-        overflow: auto;
-        height:100%;
-        background:white;
-      }
-      #WorkspaceSelector
-      {
-        position:relative;
-        background-color:white;
-        border: 1px solid #ccc;
-        float:left;
-        margin-left:10px;
-        height:24px;
-        width:100%;
-        margin-right:10px;
-        flex-grow: 1;
-        border-radius: 5px;
-        font-weight:700;
-        color:#555;
-        font-family: 'Sans-Serif Workhorse', sans-serif;
-      }
-      #FileListContainer
-      {
-        display:flex;
-        flex-direction: row;
-        width:100%;
-        height:100%;
-      }
-      #FileListContent
-      {
-        font-size:11px;
-      }
-      #FileEmbed
-      {
-        position:absolute;
-        width:100%;
-        height:100%;
-        border:none;
-        box-sizing: border-box;
-      }
-      #QuickButtonsContainer
-      {
-        position: absolute;
-        display: flex;
-        left:0px;
-        top:35px;
-        width:100%;
-        height:35px;
-        border-bottom: 1px solid #efefef;
-      }
-      .QuickButtons
-      {
-        position:relative;
-        flex-grow: 1;
-        margin:4px;
-        border-radius: 5px;
-        border: 1px solid #efefef;
-        background-color: white;
-        color:#777;
-        font-weight:700;
-        cursor:pointer;
-      }
-      .QuickButtons:hover
-      {
-        background-color: rgb(212, 227, 255);
-        border: 1px solid #999;
       }
     </style>
   </head>
@@ -247,6 +76,6 @@
         }
       }
     </script>
-    <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
+    <script src="https://accounts.google.com/gsi/client""></script>
   </body>
 </html>
