--- a/simpleAuth.html
+++ b/simpleAuth.html
@@ -60,7 +60,7 @@
           if(email != "")
           {
             //alert(email);
-            window.open("https://docs.sangagames.com/simpleAuth.html?email=" + email);
+            window.open("https://docs.sangagames.com/simpleAuth.html?email=" + email,"_self");
           } 
         }
       }
